# handinhand

./: ARCHITECTURE.py  DELIVERY_COMPLETE.txt  FIX_SUMMARY.md  FIX_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  PRD.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.txt  SETUP_GUIDE.md  SKELETON_DEBUGGER_IMPLEMENTATION.md  SKELETON_DEBUGGER_INDEX.md  VERIFICATION_REPORT.txt  activate.sh  analyze_hand_proportions.py  analyze_pose_structure.py  analyze_signature.py  augment_signatures.py  check_arm_lengths.py  check_blue_dot.py  compare_signatures.py  compare_where.py  concept_map.json  create_test_videos.py  debug_hands.py  debug_hello1.py  debug_hello1_bounds.py  debug_normalization.py  extract_signatures.py  generate_embeddings.py  optimize_frame_range.py  progress.md  pyproject.toml  quick_start.py  recognition_base.py  recognition_engine.py  recognition_engine_ui.py  requirements.txt  run_skeleton_debugger.py  setup_dataset.py  (+23 more)
docs/: ARCHIVE.md  CODE_AUDIT.md  CONSOLIDATION_SUMMARY.md  EXTRACTION_PIPELINE.md  FEATURE_ASSESSMENT.md  GUIDELINES.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MVP_ARCHITECTURE_ANALYSIS.md  MVP_COMPLETE_SUMMARY.md  MVP_DASHBOARD.md  MVP_DOCUMENTATION_INDEX.md  MVP_QUICKSTART.md  MVP_READY_TO_TEST.md  OPTIMIZATIONS.md  PHASE_2A_DELIVERY_SUMMARY.md  PROGRESS_CHECKLIST.md  PROJECT_OVERVIEW.md  QUICK_START.md  README_SKELETON_DEBUGGER.md  RECOGNITION_ENGINE_DESIGN.md  SETUP.md  SIGNATURE_STRATEGY.md  SKELETON_DEBUGGER_GUIDE.md  SMOOTHING_ANALYSIS.md  TECHNICAL_CHECKLIST.md  TECHSTACK.md  TECH_LEAD_ASSESSMENT.md  TESTING.md  WHERE_ANALYSIS.md  (+1 more)
(+69 files in other folders)
