[tool.poetry]
name = "linguasign-ai"
version = "0.1.0"
description = "Sign Language Kinematics-to-Kinematics Translation Tool using 3D avatars"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.8.0"
mediapipe = "^0.10.0"
numpy = "^1.24.0,<2.0.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
matplotlib = "^3.7.0"
Pillow = "^10.0.0"
python-socketio = "^5.9.0"
python-engineio = "^4.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
